storage refactor (I still hate it)